# Kusrovaya_Kustov_4

./: .gitignore  README.md  pyproject.toml
src/: ApiConnect.py  all_vacancy.json  main.py  utils_vacancy.py  vacancy.py
