[tool.poetry]
name = "kusrovaya-kustov-4"
version = "0.1.0"
description = ""
authors = ["Kusto7 <kirill.kustov21@gmail.com>"]
readme = "README.md"
packages = [{include = "kusrovaya_kustov_4"}]

[tool.poetry.dependencies]
python = "^3.11"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
